tests/NormalTests/paczka1/fuzzy1/79761842.err
Error in line 1: A374 A227 91,4
Error in line 3: A374 S937 12,6
Error in line 9: pCzEr A227 22,4
Error in line 11: GOrJ90f A227 83,4
Error in line 30: jOaV S937 23,7
